[tool.poetry]
name = "sd-copy"
version = "0.1.0"
description = ""
authors = ["Felix Hoffmann <felix11h@github.nomail>"]

[tool.poetry.dependencies]
python = "^3.9"
PyExifTool = "^0.4.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

isort = "^5.9.2"
black = "*"

flake8 = "^3.9.2"
flake8-black = "*"
flake8-quotes = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = "True"

[tool.poetry.scripts]
sd-copy = 'sd_copy.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
